# elastic_compose

./: Cargo.toml
assets/: elastic_compose_service.service
scripts/dev/: setup.sh  start.sh
src/: cli.rs  cmd.rs  config.rs  main.rs  service.rs
src/server/: mod.rs  route.rs  schema.rs
